Fix icon alignment

--- a/components/app-core/frontend/src/view/navbar/navigation/navigation.scss
+++ b/components/app-core/frontend/src/view/navbar/navigation/navigation.scss
@@ -62,6 +62,10 @@ bottom-nav {
       i {
         font-size: 20px;
       }
+
+      .bottom-nav-menu-icon {
+        height: 18px;
+      }
     }
   }
 
